backend/framework/networking/ec2-networking/hcl-vpc-peering/main.tf
###########PROVIDER#####################################


terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.33.0"
    }
  }

  required_version = ">= 1.6.5"
}

provider "aws" {
  region  = "eu-west-1" //Irland
}




############# VPC-A #######################


resource "aws_vpc" "vpc_a" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
}

resource "aws_subnet" "subnet_a" {
  vpc_id     = aws_vpc.vpc_a.id
  cidr_block = "10.0.1.0/24"
}

resource "aws_internet_gateway" "igw_a" {
  vpc_id = aws_vpc.vpc_a.id
}

resource "aws_route_table" "rt_a" {
  vpc_id = aws_vpc.vpc_a.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw_a.id
  }
  route {
    cidr_block                = aws_vpc.vpc_b.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.example.id
  }
}

resource "aws_route_table_association" "rta_subnet_a" {
  subnet_id      = aws_subnet.subnet_a.id
  route_table_id = aws_route_table.rt_a.id
}

resource "aws_instance" "instance_a" {
  ami                         = var.instance-ami
  instance_type               = var.instance-type
  subnet_id                   = aws_subnet.subnet_a.id
#   key_name                    = aws_key_pair.key.key_name
  associate_public_ip_address = true
  security_groups             = [aws_security_group.allow_ssh_a.id]
  lifecycle {
    ignore_changes = [security_groups]
  }
}


###############VPC-B###################################



resource "aws_vpc" "vpc_b" {
  cidr_block           = "11.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
}

resource "aws_subnet" "subnet_b" {
  vpc_id     = aws_vpc.vpc_b.id
  cidr_block = "11.0.1.0/24"
}

resource "aws_internet_gateway" "igw_b" {
  vpc_id = aws_vpc.vpc_b.id
}

resource "aws_route_table" "rt_b" {
  vpc_id = aws_vpc.vpc_b.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw_b.id
  }
  route {
    cidr_block                = aws_vpc.vpc_a.cidr_block
    vpc_peering_connection_id = aws_vpc_peering_connection.example.id
  }
}

resource "aws_route_table_association" "rta_subnet_b" {
  subnet_id      = aws_subnet.subnet_b.id
  route_table_id = aws_route_table.rt_b.id
}

resource "aws_vpc_peering_connection" "example" {
  vpc_id      = aws_vpc.vpc_a.id
  peer_vpc_id = aws_vpc.vpc_b.id
  auto_accept = true
}

resource "aws_security_group" "allow_ssh_a" {
  vpc_id = aws_vpc.vpc_a.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "allow_ssh_b" {
  vpc_id = aws_vpc.vpc_b.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}



resource "aws_instance" "instance_b" {
  ami                         = var.instance-ami
  instance_type               = var.instance-type
  subnet_id                   = aws_subnet.subnet_b.id
#   key_name                    = aws_key_pair.key.key_name
  associate_public_ip_address = true
  security_groups             = [aws_security_group.allow_ssh_b.id]
  lifecycle {
    ignore_changes = [security_groups]
  }
}


variable "instance-type" {
    type= string
    default = "t2.micro"
}

variable "instance-ami" {
    type= string
    default = "ami-0fef2f5dd8d0917e8"
}

output "ec2_instances" {
  value = {
    instanceA_publicDNS = aws_instance.instance_a.public_dns
    instanceA_privateIp = aws_instance.instance_a.private_ip
    instanceB_publicDNS = aws_instance.instance_b.public_dns
    instanceB_privateIp = aws_instance.instance_b.private_ip
  }
}



# resource "aws_key_pair" "key" {
#   key_name   = "ssh-key"
#   public_key = file("~/.ssh/id_rsa.pub")
# }

# data "aws_ami" "ubuntu" {
#   most_recent = true

#   filter {
#     name   = "name"
#     values = ["ubuntu*"]
#   }
# }
